--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,49 @@
 /* add css module styles here (optional) */
+Button {
+  width: max-content;
+  height: max-content;
+  padding: 7px 14px;
+  font-size: 1rem;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  cursor: pointer;
+  border: 1px solid cornflowerblue;
+  border-radius: 10px;
+  background-color: white;
+  color: cornflowerblue;
+}
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+Button:hover {
+  box-shadow: 0px 6px 8px cornflowerblue;
+  transform: translateY(-2px);
+}
+
+Button[type=primary] {
+  border: none;
+  background-color: cornflowerblue;
+  color: white;
+}
+
+Button[type=dashed] {
+  border: 1px dashed cornflowerblue;
+}
+
+Button[type=text] {
+  border: none;
+  background: none;
+  color: black;
+}
+
+Button[type=text]:hover {
+  background-color: rgba(100, 148, 237, 0.637);
+  border-radius: 10px;
+  color: white;
+}
+
+Button[type=link] {
+  border: none;
+  background: none;
+}
+
+Button[type=link]:hover {
+  font-weight: bold;
 }
